manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go
  labels:
    istio-injection: enabled
