manifests/vegeta_w_istio_large.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vegeta
  namespace: go
  annotations:
    sidecar.istio.io/inject: "true"
    sidecar.istio.io/proxyCPU: "5000m"
    sidecar.istio.io/proxyMemory: "1Gi"
    proxy.istio.io/config: "{'concurrency':'16'}"
spec:
  containers:
    - name: vegeta
      image: shibui/istio-load-test:vegeta_0.0.0
      imagePullPolicy: Always
      command:
        - tail
        - -f
        - /dev/null
      resources:
        requests:
          cpu: 5000m
          memory: "1Gi"
