manifests/vegeta_wo_istio.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vegeta
  namespace: go
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  containers:
    - name: vegeta
      image: shibui/istio-load-test:vegeta_0.0.0
      imagePullPolicy: Always
      command:
        - tail
        - -f
        - /dev/null
      resources:
        requests:
          cpu: 500m
          memory: "300Mi"
