manifests/gopi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gopi-fm
  namespace: go
  labels:
    app: gopi
spec:
  replicas: 15
  selector:
    matchLabels:
      app: gopi
  template:
    metadata:
      labels:
        app: gopi
        version: fm
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/proxyCPU: "500m"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPULimit: "1000m"
        sidecar.istio.io/proxyMemoryLimit: "256Mi"
        proxy.istio.io/config: "{'concurrency':'8'}"
    spec:
      containers:
        - name: gopi-fm
          image: gcr.io/vrizead/vrize-gopi-sample:fm_0
          ports:
            - containerPort: 8500
            - containerPort: 8501
          resources:
            limits:
              cpu: 1000m
              memory: "300Mi"
            requests:
              cpu: 1000m
              memory: "300Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gopi-lr
  namespace: go
  labels:
    app: gopi
spec:
  replicas: 15
  selector:
    matchLabels:
      app: gopi
  template:
    metadata:
      labels:
        app: gopi
        version: lr
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/proxyCPU: "500m"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPULimit: "1000m"
        sidecar.istio.io/proxyMemoryLimit: "256Mi"
        proxy.istio.io/config: "{'concurrency':'8'}"
    spec:
      containers:
        - name: gopi-lr
          image: gcr.io/vrizead/vrize-gopi-sample:lr_0
          ports:
            - containerPort: 8500
            - containerPort: 8501
          resources:
            limits:
              cpu: 1000m
              memory: "300Mi"
            requests:
              cpu: 1000m
              memory: "300Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: gopi
  namespace: go
  labels:
    app: gopi
spec:
  ports:
    - name: grpc
      port: 8500
      protocol: TCP
    - name: rest
      port: 8501
      protocol: TCP
  selector:
    app: gopi
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gopi
  namespace: go
spec:
  host: gopi
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: fm
      labels:
        version: fm
    - name: lr
      labels:
        version: lr
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gopi
  namespace: go
spec:
  hosts:
    - gopi
  http:
    - route:
        - destination:
            host: gopi
            subset: fm
          weight: 10
        - destination:
            host: gopi
            subset: lr
          weight: 90
